--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CarTrack User</string>
+    <string name="username_label">User Name</string>
+    <string name="password_label">Password</string>
 </resources>
