--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CarTrack User</string>
     <string name="username_label">User Name</string>
     <string name="password_label">Password</string>
+    <string name="login_label">Login</string>
 </resources>
