--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="username_label">User Name</string>
     <string name="password_label">Password</string>
     <string name="login_label">Login</string>
+    <string name="company_label">Company Details</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="company_name_label">Name:</string>
 </resources>
