--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="company_name_label">Name:</string>
     <string name="company_phrase_label">Catch Phrase</string>
     <string name="select_country_operation">Please Select your country in order to serve you better and get the customized experience.</string>
+    <string name="login_error">Login Error</string>
+    <string name="login_error_msg">We couldn\'t find you in our database. Pls check your credentials and try again.</string>
 </resources>
