splash screen completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="select_country_operation">Please Select your country in order to serve you better and get the customized experience.</string>
     <string name="login_error">Login Error</string>
     <string name="login_error_msg">We couldn\'t find you in our database. Pls check your credentials and try again.</string>
+    <string name="splash_error">CAR TRACK</string>
+    <string name="db_init_erro">Sorry, Something went wrong. We couldn\'t setup the DB. Please relaunch the app.</string>
 </resources>
